--- a/kidney_se/src/soft/idea/hospital/kidny2017/se/kidney_se/pl_match_donner_patient.form
+++ b/kidney_se/src/soft/idea/hospital/kidny2017/se/kidney_se/pl_match_donner_patient.form
@@ -60,9 +60,9 @@
         <Component class="javax.swing.JTable" name="tb_patient">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="2" rowCount="4">
-                <Column editable="true" title="Patient" type="java.lang.Object"/>
-                <Column editable="true" title="Title 2" type="java.lang.Object"/>
+              <Table columnCount="2" rowCount="0">
+                <Column editable="false" title="ID" type="java.lang.Object"/>
+                <Column editable="false" title="Patient" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -83,6 +83,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tb_patientMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -141,13 +144,13 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="jLabel32" max="32767" attributes="0"/>
-                          <Component id="lb_patient_dor" alignment="0" max="32767" attributes="0"/>
+                          <Component id="lb_patient_name" alignment="0" max="32767" attributes="0"/>
                           <Component id="jLabel4" alignment="0" max="32767" attributes="0"/>
-                          <Component id="lb_patient_bloadGroup" alignment="0" max="32767" attributes="0"/>
+                          <Component id="lb_patient_dor" alignment="0" max="32767" attributes="0"/>
                           <Component id="jLabel8" alignment="0" pref="298" max="32767" attributes="0"/>
-                          <Component id="lb_patient_hlaClass1" alignment="0" max="32767" attributes="0"/>
+                          <Component id="lb_patient_bloadGroup" alignment="0" max="32767" attributes="0"/>
                           <Component id="jLabel10" alignment="0" pref="298" max="32767" attributes="0"/>
-                          <Component id="lb_patient_hlaClass2" alignment="0" max="32767" attributes="0"/>
+                          <Component id="lb_patient_hla" alignment="0" max="32767" attributes="0"/>
                           <Component id="jLabel13" alignment="0" pref="298" max="32767" attributes="0"/>
                           <Component id="lb_patient_dob" alignment="0" max="32767" attributes="0"/>
                           <Component id="jLabel15" alignment="0" pref="298" max="32767" attributes="0"/>
@@ -162,19 +165,19 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="lb_patient_dor" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="lb_patient_name" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="lb_patient_bloadGroup" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="lb_patient_dor" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel10" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="lb_patient_hlaClass1" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="lb_patient_bloadGroup" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel13" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="lb_patient_hlaClass2" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="lb_patient_hla" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel15" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
@@ -189,6 +192,18 @@
           <SubComponents>
             <Component class="javax.swing.JLabel" name="jLabel4">
               <Properties>
+                <Property name="text" type="java.lang.String" value="Name"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="lb_patient_name">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Tahoma" size="16" style="0"/>
+                </Property>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="jLabel8">
+              <Properties>
                 <Property name="text" type="java.lang.String" value="Date of registration"/>
               </Properties>
             </Component>
@@ -197,12 +212,11 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="16" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="jLabel5"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel8">
+            <Component class="javax.swing.JLabel" name="jLabel10">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Blood group"/>
+                <Property name="text" type="java.lang.String" value="Blood Group"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="lb_patient_bloadGroup">
@@ -210,33 +224,18 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="16" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="jLabel5"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel10">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="HLA (class 1)"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JLabel" name="lb_patient_hlaClass1">
+            <Component class="javax.swing.JLabel" name="lb_patient_hla">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="16" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="jLabel5"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JLabel" name="lb_patient_hlaClass2">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Tahoma" size="16" style="0"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="jLabel5"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel13">
               <Properties>
-                <Property name="text" type="java.lang.String" value="HLA (class 2)"/>
+                <Property name="text" type="java.lang.String" value="HLA "/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="lb_patient_dob">
@@ -244,7 +243,6 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="16" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="jLabel5"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel15">
@@ -261,7 +259,7 @@
                   <Color blue="0" green="ff" red="33" type="rgb"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="4"/>
-                <Property name="text" type="java.lang.String" value="7/10"/>
+                <Property name="text" type="java.lang.String" value="10/10"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -275,13 +273,13 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="jLabel33" min="-2" pref="302" max="-2" attributes="0"/>
-                          <Component id="lb_donner_dor" alignment="0" max="32767" attributes="0"/>
+                          <Component id="lb_donner_name" alignment="0" max="32767" attributes="0"/>
                           <Component id="jLabel6" alignment="0" max="32767" attributes="0"/>
-                          <Component id="lb_donner_bloodGroup" alignment="0" max="32767" attributes="0"/>
+                          <Component id="lb_donner_dor" alignment="0" max="32767" attributes="0"/>
                           <Component id="jLabel20" alignment="0" max="32767" attributes="0"/>
-                          <Component id="lb_donner_hlaClass1" alignment="0" max="32767" attributes="0"/>
+                          <Component id="lb_donner_bloodGroup" alignment="0" max="32767" attributes="0"/>
                           <Component id="jLabel23" alignment="0" max="32767" attributes="0"/>
-                          <Component id="lb_donner_hlaClass2" alignment="0" max="32767" attributes="0"/>
+                          <Component id="lb_donner_hla" alignment="0" max="32767" attributes="0"/>
                           <Component id="jLabel24" alignment="0" max="32767" attributes="0"/>
                           <Component id="lb_donner_dob" alignment="0" max="32767" attributes="0"/>
                           <Component id="jLabel26" alignment="0" max="32767" attributes="0"/>
@@ -296,19 +294,19 @@
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="lb_donner_dor" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="lb_donner_name" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel20" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="lb_donner_bloodGroup" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="lb_donner_dor" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel23" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="lb_donner_hlaClass1" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="lb_donner_bloodGroup" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel24" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="lb_donner_hlaClass2" min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="lb_donner_hla" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel26" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
@@ -323,6 +321,18 @@
           <SubComponents>
             <Component class="javax.swing.JLabel" name="jLabel6">
               <Properties>
+                <Property name="text" type="java.lang.String" value="Name"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="lb_donner_name">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Tahoma" size="16" style="0"/>
+                </Property>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="jLabel20">
+              <Properties>
                 <Property name="text" type="java.lang.String" value="Date of registration"/>
               </Properties>
             </Component>
@@ -331,12 +341,6 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="16" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="jLabel5"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JLabel" name="jLabel20">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Blood group"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="lb_donner_bloodGroup">
@@ -344,33 +348,23 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="16" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="jLabel5"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JLabel" name="lb_donner_hlaClass1">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Tahoma" size="16" style="0"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="jLabel5"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel23">
               <Properties>
-                <Property name="text" type="java.lang.String" value="HLA (class 1)"/>
+                <Property name="text" type="java.lang.String" value="Blood Group"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel24">
               <Properties>
-                <Property name="text" type="java.lang.String" value="HLA (class 2)"/>
+                <Property name="text" type="java.lang.String" value="HLA"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="lb_donner_hlaClass2">
+            <Component class="javax.swing.JLabel" name="lb_donner_hla">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="16" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="jLabel5"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel26">
@@ -383,7 +377,6 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="16" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="jLabel5"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel33">
@@ -395,7 +388,7 @@
                   <Color blue="0" green="ff" red="33" type="rgb"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="4"/>
-                <Property name="text" type="java.lang.String" value="6/10"/>
+                <Property name="text" type="java.lang.String" value="10/10"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -436,19 +429,19 @@
         <Component class="javax.swing.JTable" name="tb_donner">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="2" rowCount="4">
-                <Column editable="true" title="Donner" type="java.lang.Object"/>
-                <Column editable="true" title="Title 2" type="java.lang.Object"/>
+              <Table columnCount="2" rowCount="0">
+                <Column editable="false" title="ID" type="java.lang.Object"/>
+                <Column editable="false" title="Donner" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                   <Title/>
                   <Editor/>
                   <Renderer/>
                 </Column>
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                   <Title/>
                   <Editor/>
                   <Renderer/>
@@ -459,6 +452,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tb_donnerMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -472,6 +468,9 @@
           <Color id="Hand Cursor"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
